# nsw-icac-scraper

./: .gitignore  README.md  pyproject.toml
nsw_icac_scraper/: __init__.py  __main__.py  folder_manager.py  scraper.py
