[tool.poetry]
name = "nsw-icac-scraper"
version = "0.1.0"
description = "Download documents from NSW ICAC investigations."
authors = ["king-millez <millez.dev@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.19.0"
bs4 = "^0.0.1"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
